objects/ILC_Metric_Quota__c.object
<CustomObject>
    <fields>
        <fullName>Amount_Value__c</fullName>
        <label>Amount Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Appointments_Per_Month__c</fullName>
        <label>Appointments Per Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month_Past_Training_Date__c</fullName>
        <label>Month Past Training Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quota_Period__c</fullName>
        <label>Quota Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fiscal Week</fullName>
                </value>
                <value>
                    <fullName>Fiscal Month</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quota_Value__c</fullName>
        <label>Quota Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Summary_Stage__c</fullName>
        <label>Summary Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1.Identify</fullName>
                </value>
                <value>
                    <fullName>2.Qualify</fullName>
                </value>
                <value>
                    <fullName>3.Introduce</fullName>
                </value>
                <value>
                    <fullName>4.Discovery Workshop</fullName>
                </value>
                <value>
                    <fullName>5.Present</fullName>
                </value>
                <value>
                    <fullName>6.Due Diligence</fullName>
                </value>
                <value>
                    <fullName>7.Negotiate</fullName>
                </value>
                <value>
                    <fullName>8.Finalize &amp; Implement</fullName>
                </value>
                <value>
                    <fullName>9.Support</fullName>
                </value>
                <value>
                    <fullName>10.End-of-Opportunity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Watson</fullName>
                </value>
                <value>
                    <fullName>Non-Watson</fullName>
                </value>
                <value>
                    <fullName>Appointment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>ILC Metric Quota</label>
    <listViews>
        <fullName>All_Quotas_full_record</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Amount_Value__c</columns>
        <columns>Appointments_Per_Month__c</columns>
        <columns>Month_Past_Training_Date__c</columns>
        <columns>Quota_Period__c</columns>
        <columns>Quota_Value__c</columns>
        <columns>Summary_Stage__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Quotas - full record</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ILC Quota - {0000}</displayFormat>
        <label>Instructional Lead Consultant Metric Quo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ILC Metric Quotas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>